--- a/pfc.tex
+++ b/pfc.tex
@@ -83,9 +83,9 @@
 \line(1,0){250}
 \end{center}
 \textbf{Reading Notes}: The above table of contents is linked to each of the sections for fast navigation. All references
-to other sections in the text are also clickable links. External hyperlinks and URLs are highlighted in pink. Direct quotes
-and factual statements include numbered links in green to their source in the References. A linked list of figures is
-available for reference at the end of this report.
+to other sections and chapters in the text are also clickable links. External hyperlinks and URLs are highlighted in pink. 
+Direct quotes and factual statements include numbered links in green to their source in the References. A linked list of 
+figures is available for reference at the end of this report.
 
 \input{./summary/summary}
 
